modules/gdscript/tests/scripts/analyzer/errors/for_loop_on_constant_int.gd
const constant_int = 1

func test():
	for x in constant_int:
		if x is String:
			pass
